# developer-agent

./: .gitignore  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
modules/schemas/: tools_schemas.py
modules/settings/: agent_config.py  developer_prompt.py
modules/utils/: llm.py  tools.py  utils.py
tests/: conftest.py  test_security.py  test_tools.py  test_write_file.py
