[project]
name = "developer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain[google-genai]>=0.3.27",
    "langgraph>=0.6.6",
    "pip>=25.2",
    "pytest>=8.4.1",
]
